--- a/build.gradle
+++ b/build.gradle
@@ -197,8 +197,12 @@ configure(subprojects.findAll { it.name != 'integration-tests' }) {
     bintray {
 //        user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
 //        key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-        user = "npm"
-        key = "7f5f4ef22fd3372225af5243c6016040b39ef9a7"
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+//        user = "bintray.user"
+//        key = "bintray.apikey"
+        user = properties.getProperty("bintray.user")
+        key = properties.getProperty("bintray.apikey")
         publications = ['mavenJava']
         publish = true
         pkg {
@@ -256,7 +260,4 @@ task jacocoRootTestReport(type: JacocoReport) {
                     ])
         })
     }
-}
-
-test {
 }
