--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.javapoetVersion = '1.7.0'
     ext.jnr_unixsocketVersion = '0.15'
     ext.okhttpVersion = '3.8.1'
-    ext.rxjavaVers
+    ext.rxjavaVers = '1.2.4'
     ext.slf4jVersion = '1.7.25'
 
     // test dependencies
@@ -195,12 +195,8 @@ configure(subprojects.findAll { it.name != 'integration-tests' }) {
     }
 
     bintray {
-//        user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-//        key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
         Properties properties = new Properties()
         properties.load(project.rootProject.file('local.properties').newDataInputStream())
-//        user = "bintray.user"
-//        key = "bintray.apikey"
         user = properties.getProperty("bintray.user")
         key = properties.getProperty("bintray.apikey")
         publications = ['mavenJava']
