--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.javapoetVersion = '1.7.0'
     ext.jnr_unixsocketVersion = '0.15'
     ext.okhttpVersion = '3.8.1'
-    ext.rxjavaVers = '1.2.4'
+    ext.rxjavaVersion = '1.2.4'
     ext.slf4jVersion = '1.7.25'
 
     // test dependencies
